Change response auth user and messageList
